[gd_scene load_steps=15 format=2]

[ext_resource path="res://Firespit.gd" type="Script" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_rocketlauncher/particle3.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/firespit/firespit1sprite_0.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/firespit/firespit1sprite_1.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.5399, 3.49229 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0552486, 0.536364 ), 0.0, 0.0, 0, 0, Vector2( 0.983425, 0.409091 ), -1.94463, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
trail_size_modifier = SubResource( 4 )
emission_shape = 1
emission_sphere_radius = 2.31
flag_disable_z = true
gravity = Vector3( -98, 2, 0 )
initial_velocity_random = 1.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
hue_variation_random = 1.0
anim_speed_random = 0.2

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 150.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
hue_variation_random = 1.0

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.0552486, 0.536364 ), 0.0, 0.0, 0, 0, Vector2( 0.983425, 0.409091 ), -1.94463, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
trail_size_modifier = SubResource( 8 )
emission_shape = 1
emission_sphere_radius = 2.31
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 50, 0 )
initial_velocity_random = 1.0
angular_velocity = 50.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
anim_speed_random = 0.2

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 150.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0

[node name="Firespit" type="Area2D"]
position = Vector2( 7, 9 )
z_index = 2
script = ExtResource( 1 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.563627, 0.478819 )
shape = SubResource( 2 )

[node name="FireTrail_old" type="Particles2D" parent="."]
visible = false
amount = 15
preprocess = 0.5
explosiveness = 0.1
randomness = 0.1
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="FireExplosion_old" type="Particles2D" parent="."]
visible = false
emitting = false
amount = 25
one_shot = true
explosiveness = 1.0
randomness = 0.1
process_material = SubResource( 6 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="FireTrail" type="Particles2D" parent="."]
amount = 25
preprocess = 0.1
explosiveness = 0.1
randomness = 0.1
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="FireExplosion" type="Particles2D" parent="."]
z_index = -1
z_as_relative = false
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
randomness = 0.1
process_material = SubResource( 10 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_Firespit_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
